--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nextarter-chakra",
   "version": "0.1.0",
   "private": true,
-  "author": "sozonome",
+  "author": "CodeWizz",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
